--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,10 @@ navbar:
       href: about.html
     - icon: fa-envelope fa-lg
       href: mailto:<nh2706@cumc.columbia.edu>
+    - icon: fa-linkedin fa-lg
+      href: https://www.linkedin.com/in/niklas-hess/
+    - icon: fa-globe fa-lg
+      href: https://niklashess.com
     - icon: fa-github fa-lg
       href: http://github.com/hessniklas/
 output:
