--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   right:
     - text: "ABOUT ME"
       href: about.html
+    - text: "DASHBOARD"
+      href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<nh2706@cumc.columbia.edu>
     - icon: fa-linkedin fa-lg
